# byu-cs-224-labs

./: CMakeLists.txt
bmpFilter/: a.out  bmpFilter  bmpFilter.c
bmpFilter/a.out.dSYM/Contents/Resources/DWARF/: a.out
bmpFilter/bmpFilter.dSYM/Contents/: Info.plist
bmpFilter/bmpFilter.dSYM/Contents/Resources/DWARF/: bmpFilter
y86-64/: a.out  y86-64.c
